# duckdb_extension_tryout

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: dummy_extension_extension.cpp  physical_dummy_operator.cpp
src/include/: dummy_extension_extension.hpp  physical_dummy_operator.hpp
test/sql/: dummy_extension.test  dummy_test.sql
